[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"


[[bin]]
bench = false
name = "1-1"
path = "src/1/1.rs"

[[bin]]
bench = false
name = "1-2"
path = "src/1/2.rs"

[[bin]]
bench = false
name = "2-1"
path = "src/2/1.rs"

[[bin]]
bench = false
name = "2-2"
path = "src/2/2.rs"

[[bin]]
bench = false
name = "3-1"
path = "src/3/1.rs"

[[bin]]
bench = false
name = "3-2"
path = "src/3/2.rs"

[[bin]]
bench = false
name = "4-1"
path = "src/4/1.rs"

[[bin]]
bench = false
name = "4-2"
path = "src/4/2.rs"

[[bin]]
bench = false
name = "5-1"
path = "src/5/1.rs"

[[bin]]
bench = false
name = "5-2"
path = "src/5/2.rs"

[dependencies]
regex = "1"
