[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Patrick José Pereira <patrickelectric@gmail.com>"]
edition = "2018"


[[bin]]
bench = false
name = "1-1"
path = "src/1/1.rs"

[[bin]]
bench = false
name = "1-2"
path = "src/1/2.rs"

[[bin]]
bench = false
name = "2-1"
path = "src/2/1.rs"

[[bin]]
bench = false
name = "2-2"
path = "src/2/2.rs"

[[bin]]
bench = false
name = "3-1"
path = "src/3/1.rs"

[[bin]]
bench = false
name = "3-2"
path = "src/3/2.rs"

[[bin]]
bench = false
name = "4-1"
path = "src/4/1.rs"

[[bin]]
bench = false
name = "4-2"
path = "src/4/2.rs"

[[bin]]
bench = false
name = "5-1"
path = "src/5/1.rs"

[[bin]]
bench = false
name = "5-2"
path = "src/5/2.rs"

[[bin]]
bench = false
name = "6-1"
path = "src/6/1.rs"

[[bin]]
bench = false
name = "6-2"
path = "src/6/2.rs"

[[bin]]
bench = false
name = "7-1"
path = "src/7/1.rs"

[[bin]]
bench = false
name = "7-2"
path = "src/7/2.rs"

[[bin]]
bench = false
name = "8-1"
path = "src/8/1.rs"

[[bin]]
bench = false
name = "8-2"
path = "src/8/2.rs"

[[bin]]
bench = false
name = "9-1"
path = "src/9/1.rs"

[[bin]]
bench = false
name = "9-2"
path = "src/9/2.rs"

[[bin]]
bench = false
name = "10-1"
path = "src/10/1.rs"

[[bin]]
bench = false
name = "10-2"
path = "src/10/2.rs"

[[bin]]
bench = false
name = "11-1"
path = "src/11/1.rs"

[[bin]]
bench = false
name = "11-2"
path = "src/11/2.rs"

[[bin]]
bench = false
name = "12-1"
path = "src/12/1.rs"

[[bin]]
bench = false
name = "12-2"
path = "src/12/2.rs"

[[bin]]
bench = false
name = "13-1"
path = "src/13/1.rs"

[[bin]]
bench = false
name = "13-2"
path = "src/13/2.rs"

[[bin]]
bench = false
name = "14-1"
path = "src/14/1.rs"

[[bin]]
bench = false
name = "14-2"
path = "src/14/2.rs"

[[bin]]
bench = false
name = "15-1"
path = "src/15/1.rs"

[[bin]]
bench = false
name = "15-2"
path = "src/15/2.rs"

[[bin]]
bench = false
name = "16-1"
path = "src/16/1.rs"

[[bin]]
bench = false
name = "16-2"
path = "src/16/2.rs"

[[bin]]
bench = false
name = "17-1"
path = "src/17/1.rs"

[[bin]]
bench = false
name = "17-2"
path = "src/17/2.rs"

[[bin]]
bench = false
name = "18-1"
path = "src/18/1.rs"

[[bin]]
bench = false
name = "18-2"
path = "src/18/2.rs"

[[bin]]
bench = false
name = "19-1"
path = "src/19/1.rs"

[[bin]]
bench = false
name = "19-2"
path = "src/19/2.rs"

[[bin]]
bench = false
name = "20-1"
path = "src/20/1.rs"

[[bin]]
bench = false
name = "21-1"
path = "src/21/1.rs"

[[bin]]
bench = false
name = "21-2"
path = "src/21/2.rs"

[[bin]]
bench = false
name = "22-1"
path = "src/22/1.rs"

[dependencies]
regex = "1"
